# test_world

./: config.json
controllers/soccer_robot/: soccer_robot.py
controllers/supervisor/: .supervisor.signature  Makefile  constants.hpp  constants.py  game.cpp  game.hpp  image_frame_buffer.py  record_result.h  supervisor  supervisor.hpp  supervisor.py
examples_new/commentator_skeleton_cpp/: .gitignore  CMakeLists.txt  Makefile  commentator_skeleton.cpp
examples_new/commentator_skeleton_py/: commentator_skeleton.py
examples_new/common/: participant.cpp  participant.hpp  participant.py  player.cpp
examples_new/general_check-variables_cpp/: .gitignore  CMakeLists.txt  Makefile  general_check-variables.cpp
examples_new/general_check-variables_py/: general_check-variables.py
examples_new/general_frame-skip_cpp/: .gitignore  CMakeLists.txt  Makefile  general_frame-skip.cpp
examples_new/general_frame-skip_py/: general_frame-skip.py
examples_new/general_image-fetch_cpp/: .gitignore  CMakeLists.txt  Makefile  general_image-fetch.cpp
examples_new/general_image-fetch_py/: general_image-fetch.py
examples_new/player_deep-learning-play_py/: dqn_nn.py  player_deep-learning-play.py
examples_new/player_deep-learning-train_py/: player_deep-learning-train.py
examples_new/player_random-walk_cpp/: .gitignore  CMakeLists.txt  Makefile  player_random-walk.cpp
examples_new/player_random-walk_py/: player_random-walk.py
examples_new/player_rulebased-A_py/: player_rulebased-A.py
examples_new/player_rulebased-B_cpp/: Makefile  (+2 more)
reports/: .gitignore
worlds/: aiwc.wbt
(+12 files in other folders)
